@@ -1,3 +1,8 @@
+2017-07-06  Julia Koval  <julia.koval@intel.com>
+
+	* gcc/config/i386/i386.c (ix86_erase_embedded_rounding):
+	Remove code for old rounding pattern.
+
 2017-07-06  Richard Earnshaw  <rearnsha@arm.com>
 
 	* config/arm/parsecpu.awk (gen_comm_data): Do not escape single quotes
